--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
 
 h1 {
     text-align: center;
-    margin: 50px;
+    margin: 30px;
     color: #0E0ADF;
     font-size: 48px;
 }
 
 h3 {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 input {
@@ -47,7 +47,7 @@ input {
 
 #Leader_board {
     width: 600px;
-    height: 362px;
+    height: 330px;
     left: 420px;
     top: 627px;
     background: #268AA9;
@@ -72,6 +72,7 @@ tr {
 }
 
 table td {
-    position: relative;
-    left: 30px;
+    width: 33%;
+    text-align: center;
+    line-height: 40px;
 }
